2010-07-20  Colin Watson  <cjwatson@ubuntu.com>

	* kern/emu/getroot.c (grub_util_get_grub_dev): Use xasprintf.

2010-07-20  Colin Watson  <cjwatson@ubuntu.com>

	* disk/loopback.c (grub_cmd_loopback): Don't leak a grub_file_t
	handle on failure.
	(grub_loopback_close): Remove empty function.
	(grub_loopback_dev): Remove close method.

2010-07-20  Colin Watson  <cjwatson@ubuntu.com>

	Disable EFI cursor when the EFI console becomes inactive.

	* term/efi/console.c (grub_efi_console_init): New function.
	(grub_efi_console_fini): New function.
	(grub_console_term_output): Register init and fini methods.

2010-07-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/util/grub-shell-tester.in: Remove bashism and declare as
	sh script.

2010-07-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* disk/loopback.c (grub_loopback): Replace filename with file.
	(delete_loopback): Handle new semantics.
	(grub_cmd_loopback): Likewise.
	(grub_loopback_iterate): Likewise.
	(grub_loopback_close): Likewise.

2010-07-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/i386/efi/grub-install.in: Revert to platform-specific behaviour
	with -p "".
	Reported by: Tito Keitel.

2010-07-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Naming convention): Document new naming convention.

2010-07-20  Vadim Solomin  <vadic052@gmail.com>
2010-07-20  Colin Watson  <cjwatson@ubuntu.com>

	Generate device.map in something closer to the old ordering.

	* util/deviceiter.c (struct device): New declaration.
	(compare_file_names): Rename to ...
	(compare_devices): ... this.  Sort by kernel name in preference to
	the stable by-id name, but keep the latter as a fallback comparison.
	Update header comment.
	(grub_util_iterate_devices) [__linux__]: Construct and sort an array
	of `struct device' rather than of plain file names.

2010-07-20  Thomas Frauendorfer  <Thomas.Frauendorfer@googlemail.com>

	* lib/i386/relocator_asm.S [! __x86_64__]: Don't try to disable amd64
	on i386.
